--- a/ui/修改课程的实验.html
+++ b/ui/修改课程的实验.html
@@ -25,138 +25,146 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u563" class="ax_default box_1">
-        <div id="u563_div" class=""></div>
+      <div id="u568" class="ax_default box_1">
+        <div id="u568_div" class=""></div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u564" class="ax_default">
+      <div id="u569" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u565" class="ax_default table_cell">
-          <img id="u565_img" class="img " src="images/修改课程的实验/u565.png"/>
-          <div id="u565_text" class="text ">
+        <div id="u570" class="ax_default table_cell">
+          <img id="u570_img" class="img " src="images/修改课程的实验/u570.png"/>
+          <div id="u570_text" class="text ">
             <p><span>test</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u566" class="ax_default table_cell">
-          <img id="u566_img" class="img " src="images/修改课程的实验/u565.png"/>
-          <div id="u566_text" class="text ">
+        <div id="u571" class="ax_default table_cell">
+          <img id="u571_img" class="img " src="images/修改课程的实验/u570.png"/>
+          <div id="u571_text" class="text ">
             <p><span>item_name</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u567" class="ax_default table_cell">
-          <img id="u567_img" class="img " src="images/修改课程的实验/u567.png"/>
-          <div id="u567_text" class="text ">
+        <div id="u572" class="ax_default table_cell">
+          <img id="u572_img" class="img " src="images/修改课程的实验/u572.png"/>
+          <div id="u572_text" class="text ">
             <p><span>item_score</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u568" class="ax_default table_cell">
-          <img id="u568_img" class="img " src="images/修改课程的实验/u568.png"/>
-          <div id="u568_text" class="text ">
+        <div id="u573" class="ax_default table_cell">
+          <img id="u573_img" class="img " src="images/修改课程的实验/u573.png"/>
+          <div id="u573_text" class="text ">
             <p><span>1</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u569" class="ax_default table_cell">
-          <img id="u569_img" class="img " src="images/修改课程的实验/u568.png"/>
+        <div id="u574" class="ax_default table_cell">
+          <img id="u574_img" class="img " src="images/修改课程的实验/u573.png"/>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u570" class="ax_default table_cell">
-          <img id="u570_img" class="img " src="images/修改课程的实验/u570.png"/>
+        <div id="u575" class="ax_default table_cell">
+          <img id="u575_img" class="img " src="images/修改课程的实验/u575.png"/>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u571" class="ax_default table_cell">
-          <img id="u571_img" class="img " src="images/修改课程的实验/u571.png"/>
-          <div id="u571_text" class="text ">
+        <div id="u576" class="ax_default table_cell">
+          <img id="u576_img" class="img " src="images/修改课程的实验/u576.png"/>
+          <div id="u576_text" class="text ">
             <p><span>2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u572" class="ax_default table_cell">
-          <img id="u572_img" class="img " src="images/修改课程的实验/u571.png"/>
+        <div id="u577" class="ax_default table_cell">
+          <img id="u577_img" class="img " src="images/修改课程的实验/u576.png"/>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u573" class="ax_default table_cell">
-          <img id="u573_img" class="img " src="images/修改课程的实验/u573.png"/>
+        <div id="u578" class="ax_default table_cell">
+          <img id="u578_img" class="img " src="images/修改课程的实验/u578.png"/>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u574" class="ax_default arrow">
-        <img id="u574_img" class="img " src="images/index/u0.png"/>
-        <div id="u574_text" class="text ">
+      <div id="u579" class="ax_default arrow">
+        <img id="u579_img" class="img " src="images/index/u0.png"/>
+        <div id="u579_text" class="text ">
           <p><span>信息系统分析与设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u575" class="ax_default text_field">
-        <input id="u575_input" type="text" value="顺序图完成度"/>
+      <div id="u580" class="ax_default text_field">
+        <input id="u580_input" type="text" value="顺序图完成度"/>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u576" class="ax_default text_field">
-        <input id="u576_input" type="text" value="描述是否清晰"/>
+      <div id="u581" class="ax_default text_field">
+        <input id="u581_input" type="text" value="描述是否清晰"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u577" class="ax_default label">
-        <div id="u577_div" class=""></div>
-        <div id="u577_text" class="text ">
+      <div id="u582" class="ax_default label">
+        <div id="u582_div" class=""></div>
+        <div id="u582_text" class="text ">
           <p><span>课程名:系统设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u578" class="ax_default text_field">
-        <input id="u578_input" type="text" value="20"/>
+      <div id="u583" class="ax_default text_field">
+        <input id="u583_input" type="text" value="20"/>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u579" class="ax_default text_field">
-        <input id="u579_input" type="text" value="32"/>
+      <div id="u584" class="ax_default text_field">
+        <input id="u584_input" type="text" value="32"/>
       </div>
 
       <!-- Unnamed (提交按钮) -->
-      <div id="u580" class="ax_default html_button">
-        <input id="u580_input" type="submit" value="提交"/>
+      <div id="u585" class="ax_default html_button">
+        <input id="u585_input" type="submit" value="提交"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u581" class="ax_default arrow">
-        <img id="u581_img" class="img " src="images/管理员主界面/u516.png"/>
+      <div id="u586" class="ax_default arrow">
+        <img id="u586_img" class="img " src="images/管理员主界面/u518.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u582" class="ax_default _文本段落">
-        <div id="u582_div" class=""></div>
-        <div id="u582_text" class="text ">
+      <div id="u587" class="ax_default _文本段落">
+        <div id="u587_div" class=""></div>
+        <div id="u587_text" class="text ">
           <p><span style="text-decoration:underline;">接口：getTest</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u583" class="ax_default arrow">
-        <img id="u583_img" class="img " src="images/管理员主界面/u516.png"/>
+      <div id="u588" class="ax_default arrow">
+        <img id="u588_img" class="img " src="images/管理员主界面/u518.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u584" class="ax_default _文本段落">
-        <div id="u584_div" class=""></div>
-        <div id="u584_text" class="text ">
+      <div id="u589" class="ax_default _文本段落">
+        <div id="u589_div" class=""></div>
+        <div id="u589_text" class="text ">
           <p><span style="text-decoration:underline;">接口：updataTest</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u590" class="ax_default _三级标题">
+        <div id="u590_div" class=""></div>
+        <div id="u590_text" class="text ">
+          <p><span>修改课程实验的评分项</span></p>
         </div>
       </div>
     </div>
