--- a/ui/新增教师.html
+++ b/ui/新增教师.html
@@ -25,18 +25,8 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u522" class="ax_default box_1">
-        <div id="u522_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u523" class="ax_default text_field">
-        <input id="u523_input" type="text" value=""/>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u524" class="ax_default text_field">
-        <input id="u524_input" type="text" value=""/>
+      <div id="u524" class="ax_default box_1">
+        <div id="u524_div" class=""></div>
       </div>
 
       <!-- Unnamed (文本框) -->
@@ -44,61 +34,79 @@
         <input id="u525_input" type="text" value=""/>
       </div>
 
+      <!-- Unnamed (文本框) -->
+      <div id="u526" class="ax_default text_field">
+        <input id="u526_input" type="text" value=""/>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u527" class="ax_default text_field">
+        <input id="u527_input" type="text" value=""/>
+      </div>
+
       <!-- Unnamed (提交按钮) -->
-      <div id="u526" class="ax_default html_button">
-        <input id="u526_input" type="submit" value="提交"/>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u527" class="ax_default label">
-        <div id="u527_div" class=""></div>
-        <div id="u527_text" class="text ">
-          <p><span>教师工号:</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u528" class="ax_default label">
-        <div id="u528_div" class=""></div>
-        <div id="u528_text" class="text ">
-          <p><span>教师姓名:</span></p>
-        </div>
+      <div id="u528" class="ax_default html_button">
+        <input id="u528_input" type="submit" value="提交"/>
       </div>
 
       <!-- Unnamed (矩形) -->
       <div id="u529" class="ax_default label">
         <div id="u529_div" class=""></div>
         <div id="u529_text" class="text ">
+          <p><span>教师工号:</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u530" class="ax_default label">
+        <div id="u530_div" class=""></div>
+        <div id="u530_text" class="text ">
+          <p><span>教师姓名:</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u531" class="ax_default label">
+        <div id="u531_div" class=""></div>
+        <div id="u531_text" class="text ">
           <p><span>教师所属部门:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u530" class="ax_default arrow">
-        <img id="u530_img" class="img " src="images/管理员主界面/u516.png"/>
+      <div id="u532" class="ax_default arrow">
+        <img id="u532_img" class="img " src="images/管理员主界面/u518.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u531" class="ax_default _文本段落">
-        <div id="u531_div" class=""></div>
-        <div id="u531_text" class="text ">
+      <div id="u533" class="ax_default _文本段落">
+        <div id="u533_div" class=""></div>
+        <div id="u533_text" class="text ">
           <p><span style="text-decoration:underline;">接口：addTeacher</span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u532" class="ax_default arrow">
-        <img id="u532_img" class="img " src="images/index/u0.png"/>
-        <div id="u532_text" class="text ">
+      <div id="u534" class="ax_default arrow">
+        <img id="u534_img" class="img " src="images/index/u0.png"/>
+        <div id="u534_text" class="text ">
           <p><span>信息系统分析与设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u533" class="ax_default label">
-        <div id="u533_div" class=""></div>
-        <div id="u533_text" class="text ">
+      <div id="u535" class="ax_default label">
+        <div id="u535_div" class=""></div>
+        <div id="u535_text" class="text ">
           <p><span>管理员</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u536" class="ax_default _三级标题">
+        <div id="u536_div" class=""></div>
+        <div id="u536_text" class="text ">
+          <p><span>新增教师</span></p>
         </div>
       </div>
     </div>
