--- a/ui/编辑课程实验.html
+++ b/ui/编辑课程实验.html
@@ -25,34 +25,8 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u547" class="ax_default box_1">
-        <div id="u547_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u548" class="ax_default text_field">
-        <input id="u548_input" type="text" value=""/>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u549" class="ax_default text_field">
-        <input id="u549_input" type="text" value=""/>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u550" class="ax_default label">
-        <div id="u550_div" class=""></div>
-        <div id="u550_text" class="text ">
-          <p><span>实验名称:</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u551" class="ax_default label">
+      <div id="u551" class="ax_default box_1">
         <div id="u551_div" class=""></div>
-        <div id="u551_text" class="text ">
-          <p><span>实验日期:</span></p>
-        </div>
       </div>
 
       <!-- Unnamed (文本框) -->
@@ -60,68 +34,102 @@
         <input id="u552_input" type="text" value=""/>
       </div>
 
+      <!-- Unnamed (文本框) -->
+      <div id="u553" class="ax_default text_field">
+        <input id="u553_input" type="text" value=""/>
+      </div>
+
       <!-- Unnamed (矩形) -->
-      <div id="u553" class="ax_default label">
-        <div id="u553_div" class=""></div>
-        <div id="u553_text" class="text ">
-          <p><span>打分项名称:</span></p>
+      <div id="u554" class="ax_default label">
+        <div id="u554_div" class=""></div>
+        <div id="u554_text" class="text ">
+          <p><span>实验名称:</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (提交按钮) -->
-      <div id="u554" class="ax_default html_button">
-        <input id="u554_input" type="submit" value="提交"/>
+      <!-- Unnamed (矩形) -->
+      <div id="u555" class="ax_default label">
+        <div id="u555_div" class=""></div>
+        <div id="u555_text" class="text ">
+          <p><span>实验日期:</span></p>
+        </div>
       </div>
 
-      <!-- Unnamed (加号) -->
-      <div id="u555" class="ax_default arrow">
-        <img id="u555_img" class="img " src="images/编辑课程实验/u555.png"/>
-      </div>
-
-      <!-- Unnamed (垂直线) -->
-      <div id="u556" class="ax_default arrow">
-        <img id="u556_img" class="img " src="images/编辑课程实验/u556.png"/>
+      <!-- Unnamed (文本框) -->
+      <div id="u556" class="ax_default text_field">
+        <input id="u556_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
       <div id="u557" class="ax_default label">
         <div id="u557_div" class=""></div>
         <div id="u557_text" class="text ">
+          <p><span>打分项名称:</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (提交按钮) -->
+      <div id="u558" class="ax_default html_button">
+        <input id="u558_input" type="submit" value="提交"/>
+      </div>
+
+      <!-- Unnamed (加号) -->
+      <div id="u559" class="ax_default arrow">
+        <img id="u559_img" class="img " src="images/编辑课程实验/u559.png"/>
+      </div>
+
+      <!-- Unnamed (垂直线) -->
+      <div id="u560" class="ax_default arrow">
+        <img id="u560_img" class="img " src="images/编辑课程实验/u560.png"/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u561" class="ax_default label">
+        <div id="u561_div" class=""></div>
+        <div id="u561_text" class="text ">
           <p><span>增加打分项，点一次存一次到数组中，两个填完才可以存数组</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u558" class="ax_default arrow">
-        <img id="u558_img" class="img " src="images/管理员主界面/u516.png"/>
+      <div id="u562" class="ax_default arrow">
+        <img id="u562_img" class="img " src="images/管理员主界面/u518.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u559" class="ax_default _文本段落">
-        <div id="u559_div" class=""></div>
-        <div id="u559_text" class="text ">
+      <div id="u563" class="ax_default _文本段落">
+        <div id="u563_div" class=""></div>
+        <div id="u563_text" class="text ">
           <p><span style="text-decoration:underline;">接口：updataTest</span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u560" class="ax_default arrow">
-        <img id="u560_img" class="img " src="images/index/u0.png"/>
-        <div id="u560_text" class="text ">
+      <div id="u564" class="ax_default arrow">
+        <img id="u564_img" class="img " src="images/index/u0.png"/>
+        <div id="u564_text" class="text ">
           <p><span>信息系统分析与设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u561" class="ax_default text_field">
-        <input id="u561_input" type="text" value=""/>
+      <div id="u565" class="ax_default text_field">
+        <input id="u565_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u562" class="ax_default label">
-        <div id="u562_div" class=""></div>
-        <div id="u562_text" class="text ">
+      <div id="u566" class="ax_default label">
+        <div id="u566_div" class=""></div>
+        <div id="u566_text" class="text ">
           <p><span>打分项分数:</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u567" class="ax_default _二级标题">
+        <div id="u567_div" class=""></div>
+        <div id="u567_text" class="text ">
+          <p><span>编辑课程实验</span></p>
         </div>
       </div>
     </div>
