--- a/ui/学生选课界面.html
+++ b/ui/学生选课界面.html
@@ -25,79 +25,71 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u470" class="ax_default box_1">
-        <div id="u470_div" class=""></div>
+      <div id="u471" class="ax_default box_1">
+        <div id="u471_div" class=""></div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u471" class="ax_default">
-
-        <!-- Unnamed (单元格) -->
-        <div id="u472" class="ax_default table_cell">
-          <img id="u472_img" class="img " src="images/学生主界面/u142.png"/>
-          <div id="u472_text" class="text ">
-            <p><span>课程id</span></p>
-          </div>
-        </div>
+      <div id="u472" class="ax_default">
 
         <!-- Unnamed (单元格) -->
         <div id="u473" class="ax_default table_cell">
           <img id="u473_img" class="img " src="images/学生主界面/u142.png"/>
           <div id="u473_text" class="text ">
-            <p><span>课程名</span></p>
+            <p><span>课程id</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u474" class="ax_default table_cell">
-          <img id="u474_img" class="img " src="images/学生主界面/u144.png"/>
+          <img id="u474_img" class="img " src="images/学生主界面/u142.png"/>
           <div id="u474_text" class="text ">
-            <p><span>专业</span></p>
+            <p><span>课程名</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u475" class="ax_default table_cell">
-          <img id="u475_img" class="img " src="images/学生主界面/u145.png"/>
+          <img id="u475_img" class="img " src="images/学生主界面/u144.png"/>
+          <div id="u475_text" class="text ">
+            <p><span>专业</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u476" class="ax_default table_cell">
-          <img id="u476_img" class="img " src="images/学生主界面/u146.png"/>
-          <div id="u476_text" class="text ">
-            <p><span>1</span></p>
-          </div>
+          <img id="u476_img" class="img " src="images/学生主界面/u145.png"/>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u477" class="ax_default table_cell">
           <img id="u477_img" class="img " src="images/学生主界面/u146.png"/>
           <div id="u477_text" class="text ">
-            <p><span style="text-decoration:underline;">系统设计</span></p>
+            <p><span>1</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u478" class="ax_default table_cell">
-          <img id="u478_img" class="img " src="images/学生主界面/u148.png"/>
+          <img id="u478_img" class="img " src="images/学生主界面/u146.png"/>
           <div id="u478_text" class="text ">
-            <p><span>软件工程</span></p>
+            <p><span style="text-decoration:underline;">系统设计</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u479" class="ax_default table_cell">
-          <img id="u479_img" class="img " src="images/学生主界面/u149.png"/>
+          <img id="u479_img" class="img " src="images/学生主界面/u148.png"/>
           <div id="u479_text" class="text ">
-            <p><span style="text-decoration:underline;">选择</span></p>
+            <p><span>软件工程</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u480" class="ax_default table_cell">
-          <img id="u480_img" class="img " src="images/学生主界面/u150.png"/>
+          <img id="u480_img" class="img " src="images/学生主界面/u149.png"/>
           <div id="u480_text" class="text ">
-            <p><span>2</span></p>
+            <p><span style="text-decoration:underline;">选择</span></p>
           </div>
         </div>
 
@@ -105,63 +97,63 @@
         <div id="u481" class="ax_default table_cell">
           <img id="u481_img" class="img " src="images/学生主界面/u150.png"/>
           <div id="u481_text" class="text ">
-            <p><span style="text-decoration:underline;">操作系统原理</span></p>
+            <p><span>2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u482" class="ax_default table_cell">
-          <img id="u482_img" class="img " src="images/学生主界面/u152.png"/>
+          <img id="u482_img" class="img " src="images/学生主界面/u150.png"/>
           <div id="u482_text" class="text ">
-            <p><span>物联网</span></p>
+            <p><span style="text-decoration:underline;">操作系统原理</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u483" class="ax_default table_cell">
-          <img id="u483_img" class="img " src="images/学生主界面/u153.png"/>
+          <img id="u483_img" class="img " src="images/学生主界面/u152.png"/>
           <div id="u483_text" class="text ">
+            <p><span>物联网</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u484" class="ax_default table_cell">
+          <img id="u484_img" class="img " src="images/学生主界面/u153.png"/>
+          <div id="u484_text" class="text ">
             <p><span style="text-decoration:underline;">取消</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (提交按钮) -->
-      <div id="u484" class="ax_default html_button">
-        <input id="u484_input" type="submit" value="筛选专业"/>
+      <div id="u485" class="ax_default html_button">
+        <input id="u485_input" type="submit" value="筛选专业"/>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u485" class="ax_default text_field">
-        <input id="u485_input" type="text" value=""/>
+      <div id="u486" class="ax_default text_field">
+        <input id="u486_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u486" class="ax_default _图片">
-        <img id="u486_img" class="img " src="images/学生主界面/u130.png"/>
+      <div id="u487" class="ax_default _图片">
+        <img id="u487_img" class="img " src="images/学生主界面/u130.png"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u487" class="ax_default arrow">
-        <img id="u487_img" class="img " src="images/老师选课界面/u456.png"/>
+      <div id="u488" class="ax_default arrow">
+        <img id="u488_img" class="img " src="images/老师选课界面/u456.png"/>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u488" class="ax_default">
-
-        <!-- Unnamed (单元格) -->
-        <div id="u489" class="ax_default table_cell">
-          <img id="u489_img" class="img " src="images/老师选课界面/u458.png"/>
-          <div id="u489_text" class="text ">
-            <p><span>筛选专业</span></p>
-          </div>
-        </div>
+      <div id="u489" class="ax_default">
 
         <!-- Unnamed (单元格) -->
         <div id="u490" class="ax_default table_cell">
           <img id="u490_img" class="img " src="images/老师选课界面/u458.png"/>
           <div id="u490_text" class="text ">
-            <p><span>筛选课程名</span></p>
+            <p><span>筛选专业</span></p>
           </div>
         </div>
 
@@ -169,68 +161,84 @@
         <div id="u491" class="ax_default table_cell">
           <img id="u491_img" class="img " src="images/老师选课界面/u458.png"/>
           <div id="u491_text" class="text ">
-            <p><span>已选择</span></p>
+            <p><span>筛选课程名</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
         <div id="u492" class="ax_default table_cell">
-          <img id="u492_img" class="img " src="images/老师选课界面/u461.png"/>
+          <img id="u492_img" class="img " src="images/老师选课界面/u458.png"/>
           <div id="u492_text" class="text ">
+            <p><span>已选择</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u493" class="ax_default table_cell">
+          <img id="u493_img" class="img " src="images/老师选课界面/u461.png"/>
+          <div id="u493_text" class="text ">
             <p><span>未选择</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u493" class="ax_default arrow">
-        <img id="u493_img" class="img " src="images/老师选课界面/u463.png"/>
+      <div id="u494" class="ax_default arrow">
+        <img id="u494_img" class="img " src="images/老师选课界面/u463.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u494" class="ax_default label">
-        <div id="u494_div" class=""></div>
-        <div id="u494_text" class="text ">
+      <div id="u495" class="ax_default label">
+        <div id="u495_div" class=""></div>
+        <div id="u495_text" class="text ">
           <p><span>点击选择按钮之后，按钮会变为取消</span></p>
         </div>
       </div>
 
       <!-- Unnamed (提交按钮) -->
-      <div id="u495" class="ax_default html_button">
-        <input id="u495_input" type="submit" value="提交"/>
+      <div id="u496" class="ax_default html_button">
+        <input id="u496_input" type="submit" value="提交"/>
       </div>
 
       <!-- Unnamed (垂直线) -->
-      <div id="u496" class="ax_default arrow">
-        <img id="u496_img" class="img " src="images/老师选课界面/u463.png"/>
+      <div id="u497" class="ax_default arrow">
+        <img id="u497_img" class="img " src="images/老师选课界面/u463.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u497" class="ax_default _文本段落">
-        <div id="u497_div" class=""></div>
-        <div id="u497_text" class="text ">
+      <div id="u498" class="ax_default _文本段落">
+        <div id="u498_div" class=""></div>
+        <div id="u498_text" class="text ">
           <p><span style="text-decoration:underline;">接口：getCourse</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u498" class="ax_default arrow">
-        <img id="u498_img" class="img " src="images/老师选课界面/u468.png"/>
+      <div id="u499" class="ax_default arrow">
+        <img id="u499_img" class="img " src="images/老师选课界面/u468.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u499" class="ax_default _文本段落">
-        <div id="u499_div" class=""></div>
-        <div id="u499_text" class="text ">
+      <div id="u500" class="ax_default _文本段落">
+        <div id="u500_div" class=""></div>
+        <div id="u500_text" class="text ">
           <p><span style="text-decoration:underline;">接口：choseCourse</span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u500" class="ax_default arrow">
-        <img id="u500_img" class="img " src="images/index/u0.png"/>
-        <div id="u500_text" class="text ">
+      <div id="u501" class="ax_default arrow">
+        <img id="u501_img" class="img " src="images/index/u0.png"/>
+        <div id="u501_text" class="text ">
           <p><span>信息系统分析与设计</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u502" class="ax_default _三级标题">
+        <div id="u502_div" class=""></div>
+        <div id="u502_text" class="text ">
+          <p><span>学生选课</span></p>
         </div>
       </div>
     </div>
