--- a/ui/新增课程.html
+++ b/ui/新增课程.html
@@ -25,85 +25,93 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u534" class="ax_default box_1">
-        <div id="u534_div" class=""></div>
+      <div id="u537" class="ax_default box_1">
+        <div id="u537_div" class=""></div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u535" class="ax_default text_field">
-        <input id="u535_input" type="text" value=""/>
+      <div id="u538" class="ax_default text_field">
+        <input id="u538_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u536" class="ax_default text_field">
-        <input id="u536_input" type="text" value=""/>
+      <div id="u539" class="ax_default text_field">
+        <input id="u539_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u537" class="ax_default text_field">
-        <input id="u537_input" type="text" value=""/>
+      <div id="u540" class="ax_default text_field">
+        <input id="u540_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u538" class="ax_default label">
-        <div id="u538_div" class=""></div>
-        <div id="u538_text" class="text ">
+      <div id="u541" class="ax_default label">
+        <div id="u541_div" class=""></div>
+        <div id="u541_text" class="text ">
           <p><span>课程名称:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u539" class="ax_default label">
-        <div id="u539_div" class=""></div>
-        <div id="u539_text" class="text ">
+      <div id="u542" class="ax_default label">
+        <div id="u542_div" class=""></div>
+        <div id="u542_text" class="text ">
           <p><span>课程所属专业:</span></p>
         </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u540" class="ax_default label">
-        <div id="u540_div" class=""></div>
-        <div id="u540_text" class="text ">
-          <p><span>课程日期:</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (垂直线) -->
-      <div id="u541" class="ax_default arrow">
-        <img id="u541_img" class="img " src="images/管理员主界面/u516.png"/>
-      </div>
-
-      <!-- Unnamed (提交按钮) -->
-      <div id="u542" class="ax_default html_button">
-        <input id="u542_input" type="submit" value="提交"/>
       </div>
 
       <!-- Unnamed (矩形) -->
       <div id="u543" class="ax_default label">
         <div id="u543_div" class=""></div>
         <div id="u543_text" class="text ">
-          <p><span>日期格式必须列如：2019-6-22</span></p>
+          <p><span>课程日期:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (垂直线) -->
       <div id="u544" class="ax_default arrow">
-        <img id="u544_img" class="img " src="images/管理员主界面/u516.png"/>
+        <img id="u544_img" class="img " src="images/管理员主界面/u518.png"/>
+      </div>
+
+      <!-- Unnamed (提交按钮) -->
+      <div id="u545" class="ax_default html_button">
+        <input id="u545_input" type="submit" value="提交"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u545" class="ax_default _文本段落">
-        <div id="u545_div" class=""></div>
-        <div id="u545_text" class="text ">
+      <div id="u546" class="ax_default label">
+        <div id="u546_div" class=""></div>
+        <div id="u546_text" class="text ">
+          <p><span>日期格式必须列如：2019-6-22</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (垂直线) -->
+      <div id="u547" class="ax_default arrow">
+        <img id="u547_img" class="img " src="images/管理员主界面/u518.png"/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u548" class="ax_default _文本段落">
+        <div id="u548_div" class=""></div>
+        <div id="u548_text" class="text ">
           <p><span style="text-decoration:underline;">接口：addCourse</span></p>
         </div>
       </div>
 
       <!-- Unnamed (形状) -->
-      <div id="u546" class="ax_default arrow">
-        <img id="u546_img" class="img " src="images/index/u0.png"/>
-        <div id="u546_text" class="text ">
+      <div id="u549" class="ax_default arrow">
+        <img id="u549_img" class="img " src="images/index/u0.png"/>
+        <div id="u549_text" class="text ">
           <p><span>信息系统分析与设计</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u550" class="ax_default _二级标题">
+        <div id="u550_div" class=""></div>
+        <div id="u550_text" class="text ">
+          <p><span>新增课程</span></p>
         </div>
       </div>
     </div>
