--- a/ui/老师选课界面.html
+++ b/ui/老师选课界面.html
@@ -233,6 +233,14 @@
           <p><span>信息系统分析与设计</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u470" class="ax_default _三级标题">
+        <div id="u470_div" class=""></div>
+        <div id="u470_text" class="text ">
+          <p><span>老师选课</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
